Changement nom fichier principal

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 config.h
 
 # Fichiers divers
-Test_ESP32_UNIVERSAL.txt
-Test_ESP32_UNIVERSAL_Travail.txt
+ESP32-Diagnostic.txt
 
 # Fichiers temporaires Arduino IDE
 *.hex
@@ -21,6 +20,7 @@ build/
 
 # Fichiers système
 .gitattributes
+.gitignore
 .DS_Store
 Thumbs.db
 *.swp
