--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Fichier de configuration WiFi (sensible - ne pas versionner)
+config.h
 wifi-config.h
 
 # Fichiers divers
 ESP32-Diagnostic.txt
+resume_modifs.md
 
 # Fichiers et répertoires générés par Arduino IDE ou la compilation
 
